src/index.scss
@import './scss/variables';

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: 'Spectral', serif;
	font-size: 16px;
	line-height: 1.4;
	min-height: 100vh;
	overflow-y: hidden;
	color: $color-neutral-1000;
	background-color: $color-neutral-500;
}

// Reset default styles of lists:
ul,
ol {
	list-style: none;
}

// Reset default styles of buttons:
button {
	border: 0;
	padding: 0;
}

